// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addEnvVar addEnvVar adds environment variables as part of a setup task should add a new environment variable when it does not exist (overwrite: false) 1`] = `
"EXISTING_VAR=value
# CommentedVar=123

# New Variable Comment
NEW_VAR=new_value
"
`;

exports[`addEnvVar addEnvVar adds environment variables as part of a setup task should not update existing environment variable if exists and overwrite is default 1`] = `
"EXISTING_VAR=value
# CommentedVar=123
"
`;

exports[`addEnvVar addEnvVar adds environment variables as part of a setup task should not update existing environment variable if exists and overwrite is false 1`] = `
"EXISTING_VAR=value
# CommentedVar=123
"
`;

exports[`addEnvVar addEnvVar adds environment variables as part of a setup task should updates an existing environment variable when it exists and overwrite chosen 1`] = `
"# Updated existing variable Comment
EXISTING_VAR=new_value
# CommentedVar=123
"
`;

exports[`updateTomlConfig updateTomlConfig configures a new CLI plugin adds when experimental cli has some plugins configured 1`] = `
"[web]
title = "Redwood App"
port = 8_910
apiUrl = "/.redwood/functions"
includeEnvironmentVariables = [ ]

[api]
port = 8_911

[experimental.cli]
autoInstall = true

  [[experimental.cli.plugins]]
  package = "@existing-example/some-package-when-cli-has-some-packages-configured"

[[experimental.cli.plugins]]
package = "@example/test-package-name"
enabled = true
"
`;

exports[`updateTomlConfig updateTomlConfig configures a new CLI plugin adds when experimental cli is not configured 1`] = `
"[web]
title = "Redwood App"
port = 8_910
apiUrl = "/.redwood/functions"
includeEnvironmentVariables = [ ]

[api]
port = 8_911

[experimental.cli]
autoInstall = true

  [[experimental.cli.plugins]]
  package = "@example/test-package-when-cli-not-configured"
  enabled = true
"
`;

exports[`updateTomlConfig updateTomlConfig configures a new CLI plugin adds when experimental cli is setup but has no plugins configured 1`] = `
"[web]
title = "Redwood App"
port = 8_910
apiUrl = "/.redwood/functions"
includeEnvironmentVariables = [ ]

[api]
port = 8_911

[experimental.cli]
autoInstall = true

[[experimental.cli.plugins]]
package = "@example/test-package-when-no-plugins-configured"
enabled = true
"
`;

exports[`updateTomlConfig updateTomlConfig configures a new CLI plugin does not add duplicate place when experimental cli has that plugin configured 1`] = `
"[web]
title = "Redwood App"
port = 8_910
apiUrl = "/.redwood/functions"
includeEnvironmentVariables = [ ]

[api]
port = 8_911

[experimental.cli]
autoInstall = true

  [[experimental.cli.plugins]]
  package = "@existing-example/some-package-name-already-exists"

"
`;
